Expand the list of devices that require a GPU workaround.

Old AMD devices are known to require a workaround for colormasks on multisample
renderbuffers. This CL expands the list of devices known to need this
workaround.

BUG=648466
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2363833002
Cr-Commit-Position: refs/heads/master@{#420756}

Former-commit-id: e9a527e058e65fcbfc37b817a5ef7e6693fbb209