gpu/config/gpu_driver_bug_list_json.cc
@@ -19,7 +19,7 @@ const char kGpuDriverBugListJson[] = LONG_STRING_CONST(
 {
   "name": "gpu driver bug list",
   // Please update the version number whenever you change this file.
-  "version": "9.01",
+  "version": "9.02",
   "entries": [
     {
       "id": 1,
@@ -1698,7 +1698,7 @@ LONG_STRING_CONST(
         "type": "macosx"
       },
       "vendor_id": "0x1002",
-      "device_id": ["0x68b8"],
+      "device_id": ["0x68b8", "0x6720", "0x6741"],
       "features": [
         "disable_multisampling_color_mask_usage"
       ]
